* Fixes a bug preventing sending a correct ticket type on multiple tickets * Fixes a problem with promo code box not showing when the link is clicked * Improves the look of registration form * Fixes a bug when an external registration link did not work

--- a/workshop-butler/public/css/wsb.wordpress.css
+++ b/workshop-butler/public/css/wsb.wordpress.css
@@ -28,3 +28,8 @@
     margin-bottom: 30px;
   }
 }
+
+/** promo link **/
+.wsb-content a.wsb-promo-link:focus {
+  outline: none;
+}
